[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "livekit>=1.1.10",
    "livekit-agents>=1.3.11",
    "livekit-plugins-nvidia>=1.3.11",
    "livekit-plugins-openai>=1.3.11",
    "livekit-plugins-silero>=1.2.15",
    "python-dotenv>=1.2.2",
]
